--- a/Memory/Views/Pages/StartGamePage.xaml
+++ b/Memory/Views/Pages/StartGamePage.xaml
@@ -3,10 +3,26 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:vm="clr-namespace:Memory.ViewModels"
              xmlns:local="clr-namespace:Memory.Views.Pages"
              mc:Ignorable="d" 
+             x:Name="StartPage"
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-            
+    <Grid Background="PowderBlue">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <Label Content="Memory" FontSize="70"  HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Center"  Width="800" Grid.Row="1" FontFamily="NSimSun" FontWeight="Bold"/>
+        <Label Content="Chose your theme:" FontSize="50" HorizontalAlignment="Center" Grid.Row="4" FontFamily="NSimSun" FontWeight="Bold"/>
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Grid.Row="5">
+            <Button Content="Cute" FontSize="40" Height="100" Width="350" Margin="40" Command="{Binding StartGameCommand, Source={x:Static vm:MainViewModel.Instance}}" CommandParameter="cute" Background="Pink"  FontFamily="NSimSun" FontWeight="Bold" />
+            <Button Content="Horror" FontSize="40" Height="100" Width="350" Margin="40" Command="{Binding StartGameCommand, Source={x:Static vm:MainViewModel.Instance}}" CommandParameter="horror" Background="Black" FontFamily="NSimSun" FontWeight="Bold" Foreground="White"/>
+        </StackPanel>
     </Grid>
 </UserControl>
